test/tests/operators/sample/zero_period.txt
error: `period` must be a positive duration
 --> tests/operators/sample/zero_period.tql:6:8
  |
6 | sample 0s
  |        ^^ 
  |
